package btree;

message btree_metadata
{
  optional int64 root = 1;
  optional int64 size = 3;
  optional int64 leaf_max = 4;
  optional int64 node_max = 5;
  optional int64 index_cursor = 7;
}

message tree_node
{
  optional int64 id = 1;
  repeated bytes keys = 2;
  repeated int64 childrens = 3;
  repeated bytes values = 4;
  optional int32 node_type = 5;
  optional int32 is_dirt = 6;
}

message tree_log
{
  optional string action = 1;
  optional bytes key = 2;
  optional bytes value = 3;
}
